# o

./: Cargo.toml  LICENSE.txt  README.md
o/: Cargo.toml  build.rs
o-core/: Cargo.toml
o-core/src/: cmd.rs  command.rs  config.rs  lib.rs
o/src/: main.rs
test/: config.json
