[package]
name = "o"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.13", features = ["cargo"] }
webbrowser = "0.7.1"
o-core = { path = "../o-core" }

[build-dependencies]
clap = { version = "3.1.13", features = ["cargo"] }
o-core = { path = "../o-core" }
clap_complete = "3.1.1"